--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.5.0",
     "use-immer": "^0.11.0",
     "uuid": "^13.0.0",
