--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-easy-crop": "^5.5.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.5.0",
     "use-immer": "^0.11.0",
@@ -32,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/web-push": "^3.6.4",
     "babel-plugin-react-compiler": "1.0.0",
     "shadcn": "^3.8.5",
     "tailwindcss": "^4",
